Add remaining folder + folder object endpoints (still need e2e tests)
