# packages/api/src/folders/dto/responses/folder-create-signed-urls-response.dto.ts
@@ -1,0 +1,6 @@
+import { createZodDto } from '@anatine/zod-nestjs'
+import { z } from 'zod'
+
+export class FolderCreateSignedUrlsResponse extends createZodDto(
+  z.array(z.string()),
+) {}
