# packages/api/src/folders/dto/responses/folder-object-get-response.dto.ts
@@ -1,0 +1,12 @@
+import { createZodDto } from '@anatine/zod-nestjs'
+import { z } from 'zod'
+
+import { folderObjectSchema } from '../folder-object.dto'
+
+export const folderObjectGetResponseSchema = z.object({
+  folderObject: folderObjectSchema,
+})
+
+export class FolderObjectGetResponse extends createZodDto(
+  folderObjectGetResponseSchema,
+) {}
